k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cmu-springboot-ingress
  labels:
    app: cmu-springboot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: cmu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cmu-springboot
                port:
                  number: 9090
